syntax = "proto3";
package Lab.Global;

enum PayoutRequisiteKind {
  CUSTOMER_NAME       = 0;
  BANK_NAME           = 1;
  BANK_BRANCH         = 2;
  BANK_ACCOUNT_NAME   = 3;
  BANK_ACCOUNT_NUMBER = 4;
  PROVINCE            = 5;
  CITY                = 6;
  ADDRESS             = 7;
  BANK_ID             = 8;
  BANK_CARD_NUMBER    = 9;
  BANK_CARD_NAME      = 10;
  BANK_BRANCH_NUMBER  = 11;
  BANK_ACCOUNT_TYPE   = 12;
  BANK_CODE           = 13;
  BANK_SWIFT          = 14;
  BANK_ADDRESS        = 15;
  BANK_IFSC           = 16;  //(Indian Financial System Code) only for Indian payments
  BANK_ACCOUNT_DIGIT  = 17;
  BANK_BRANCH_DIGIT   = 18;
  // NAB needs bank statement file in order to process payout
  BANK_STATEMENT_FILE       = 19;
  PIX_KEY                   = 20;
  LIGHTNING_NETWORK_INVOICE = 21;
  EXTERNAL_PAYOUT_OFFER     = 22;
  KYC_STATUS                = 23;
  POSTCODE                  = 24;
  DATE_OF_BIRTH             = 25;
  PHONE_NUMBER              = 26;
  CUSTOMER_LOCAL_NAME       = 27;
  CUSTOMER_TYPE             = 28;
  USER_TOKEN                = 29;
  CUSTOMER_DOCUMENT_ID      = 30;
  CUSTOMER_DOCUMENT_TYPE    = 31;
  STATE                     = 32;
  WALLET_NUMBER             = 33;
  WALLET_NAME               = 34;
  IBAN                      = 35;
  COUNTRY                   = 36;
  FROM_ACCOUNT_TYPE         = 37;
  TO_ACCOUNT_TYPE           = 38;
  FROM_CURRENCY             = 39;
  TO_CURRENCY               = 40;
  SENDER_IBAN               = 41;
  BIC                       = 42;
  SORT_CODE                 = 43;
  FIRST_NAME                = 44;
  LAST_NAME                 = 45;
  PIX_KEY_TYPE              = 46;
  PAYIXI_ID                 = 47;
  TELEGRAM_USER_ID          = 48;
  EXTERNAL_USER_ID          = 49;
  USER_ESTIMATED_BALANCE    = 50;
  REDIRECT_URI              = 51;
  VEGA_USER_ID              = 52;
  PASSWORD                  = 53;
  CUSTOMER_IP_ADDRESS       = 54;
  MIDDLE_NAME               = 55;
  STREET                    = 56;
  CARD_EXPIRY_YEAR          = 57;
  SCHEME                    = 58;
  PASSPORT_NUMBER           = 59;
  NETWORK                   = 60;
  IDEMPOTENCY_KEY           = 61;
}
